# secure-enterprise-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
deploy/: docker-compose.yml
docs/adr/: 001-tech-stack-selection.md
src/app/: main.py
src/app/api/v1/: chat.py  ingest.py
src/app/schemas/: chat.py  ingest.py
src/core/: config.py  logging.py
src/domain/: documents.py
src/infrastructure/llm/: vllm_client.py
src/infrastructure/parsers/: pdf.py
src/infrastructure/vector_db/: factory.py
src/services/: ingestion.py  rag_service.py
tests/integration/: test_api_ingest.py
tests/unit/: test_parser.py
